fixed contact alignment positioning

--- a/index.css
+++ b/index.css
@@ -715,6 +715,8 @@ footer {
 
   .contact {
     flex-direction: row;
+    align-items: flex-start;
+    padding-block-start: 80px;
   }
 
   .form-text p {
